welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:9: error: too many arguments for method baisseBrosse: ()Unit
	baisseBrosse(c);
                    ^