welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers(){
	flower(Color.PINK);
}


def flower(c:Color){
	setCouleurBrosse(c);
	baisseBrosse(c);
	avance();avance();avance();
	leveBrosse();
	gauche();
	avance();
	gauche();
	avance();
	gauche();
	setCouleurBrosse(c);
	baisseBrosse();
	leveBrosse();
	avance();
	setCouleurBrosse(Color.YELLOW);
	baisseBrosse();
	leveBrosse();
	avance();
	setCouleurBrosse(c);
	baisseBrosse();
	leveBrosse();
	avance();
	gauche();
	avance();
	gauche();
	avance();
	gauche();
	
	
	
	
}
